--- a/src/containers/TodoList/style.css
+++ b/src/containers/TodoList/style.css
@@ -89,3 +89,11 @@ body {
     text-indent: 10px;
     outline: none;
 }
+
+.undo-list-checkout {
+    left: 10px;
+    width: 22px;
+    height: 22px;
+    cursor: pointer;
+    vertical-align: baseline;
+}
